--- a/src/App.css
+++ b/src/App.css
@@ -2,25 +2,32 @@
   text-align: center;
 }
 
-.red{
+.red {
   color: red;
 }
 
-.bold{
+.bold {
   font-weight: bold;
 }
 
-.button{ 
+.App button {
   background-color: green;
   color: white;
   font: inherit;
   border: 1px solid blue;
   padding: 8px;
   cursor: pointer;
-  
 }
 
- .button:hover {
-    background-color: lightgreen;
-    color: black;
-  }
+.App button:hover {
+  background-color: lightgreen;
+  color: black;
+}
+
+.App button.Red {
+  background-color: red;
+}
+
+.App button.Red:hover {
+  background-color: salmon;
+}
